--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Root Variables */
 :root {
   --primary: #ffcc00;
+}
+
+/* Backgrounds */
+.gold-gradient-text {
+  @apply bg-gradient-to-r from-[#f2c511] via-[#f39c19] to-[#c0382b] bg-clip-text text-transparent;
 }
