style: change the primary color to cyan

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,7 +4,7 @@
 
 /* Root Variables */
 :root {
-  --primary: #ffa800;
+  --primary: #00ffff;
   --smooth-black: #0e0e0e;
   --smooth-gray: #999999;
   --smooth-white: #eeeeee;
